# drm-rs

./: Cargo.toml
drm-ffi/: Cargo.toml
drm-ffi/drm-sys/: Cargo.toml
drm-ffi/src/: mode.rs
examples/: atomic_modeset.rs
src/buffer/: mod.rs
src/control/: mod.rs
