[package]
name = "drm"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.0.0"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]

[dependencies]
drm-ffi = { path = "drm-ffi" }
nix = "^0.20.0"
bitflags = "1.2"

[dev-dependencies]
image = { version = "^0.23.14", default-features = false, features = ["png"] }
rustyline = "^8.0.0"

[features]
use_bindgen = ["drm-ffi/use_bindgen"]
