[package]
name = "drm-ffi"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.4.0-alpha1"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]

[dependencies]
drm-sys = { path = "drm-sys" }
nix = "^0.20.0"

[features]
use_bindgen = ["drm-sys/use_bindgen"]
